# ai-doc-template-generator

./: README.md  tailwind.config.js
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  export.py  loader.py  main.py  openaiutils.py  setup_test_db.py  templates_service.py
backend/app/assistants/: assistant.py  local_assistant.py  prompts.py  tools.py
backend/app/utils/: splitter.py  token_utils.py
backend/tests/: conftest.py  test_templates_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite
frontend/src/: App.jsx
frontend/src/components/: ChatInput.jsx  ChatMessages.jsx  Chatbot.jsx  Popup.jsx  Splitter.jsx  TemplateEditor.jsx  TemplatesMenu.jsx
frontend/src/config/: config.js
frontend/src/services/: templatesService.js
frontend/src/utils/: eventEmitter.js
